--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -294,7 +294,6 @@ i {
 
 /* Search Area Style
 ==================== */
-
 .search-area {
     width: 100%;
     margin: 0 auto;
@@ -593,7 +592,7 @@ i {
         @include transition(0.4s);
         transition-delay: 0s;
         // display: none;
-        object-fit: fill;
+        object-fit: contain;
         width: 100%;
         height: 100%;
         border-radius: 20px;
@@ -696,20 +695,14 @@ i {
 
 /* Vue Player */
 
-// Vue Custom Style
-.plyr--video {
-    border-radius: 20px;
-}
 
 .plyr__progress__container {
     width: 100%;
 }
 
-
 .plyr__video-wrapper {
     position: initial;
 }
-
 
 /* == Home == */
 .home-slider-block {
@@ -1154,9 +1147,7 @@ $cloud-bgColor: #fff;
 
     .plyr video {
         width: 100%;
-        border-radius: 20px;
-        object-fit: cover;
-        max-height:550px
+        object-fit: contain;
     }
 
     .same-movies {
@@ -1164,8 +1155,8 @@ $cloud-bgColor: #fff;
     }
 
     .chat-video {
-        bottom: 7rem;
-        right: 12.5%;
+        bottom: 10rem;
+        right: 2rem;
 
         .mine .message.last:after {
             background: #000;
@@ -1375,10 +1366,7 @@ $cloud-bgColor: #fff;
     .player-mov {
         margin: 30px 20px;
         border-top: 4px solid $primary-color;
-        border-radius: 22px;
-        max-height: 550px;
-    max-width: 80%;
-    margin: 2rem auto;
+        margin: 2rem auto;
     }
 
     .player-trailer {
@@ -1699,30 +1687,30 @@ $cloud-bgColor: #fff;
         position: relative;
     }
 
-    .mine .message.last:before {
-        content: "";
-        position: absolute;
-        z-index: 0;
-        bottom: 0;
-        right: -8px;
-        height: 20px;
-        width: 20px;
-        background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
-        background-attachment: fixed;
-        border-bottom-left-radius: 15px;
-    }
+    // .mine .message.last:before {
+    //     content: "";
+    //     position: absolute;
+    //     z-index: 0;
+    //     bottom: 0;
+    //     right: -8px;
+    //     height: 20px;
+    //     width: 20px;
+    //     background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
+    //     background-attachment: fixed;
+    //     border-bottom-left-radius: 15px;
+    // }
 
-    .mine .message.last:after {
-        content: "";
-        position: absolute;
-        z-index: 1;
-        bottom: 0;
-        right: -10px;
-        width: 10px;
-        height: 20px;
-        background: #eaeaea;
-        border-bottom-left-radius: 10px;
-    }
+    // .mine .message.last:after {
+    //     content: "";
+    //     position: absolute;
+    //     z-index: 1;
+    //     bottom: 0;
+    //     right: -10px;
+    //     width: 10px;
+    //     height: 20px;
+    //     background: #eaeaea;
+    //     border-bottom-left-radius: 10px;
+    // }
 }
 /* == Messages === */
 .chat2 {
@@ -1761,30 +1749,30 @@ $cloud-bgColor: #fff;
         position: relative;
     }
 
-    .mine .message.last:before {
-        content: "";
-        position: absolute;
-        z-index: 0;
-        top: 0;
-        left: -8px;
-        height: 20px;
-        width: 20px;
-        background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
-        background-attachment: fixed;
-        border-bottom-left-radius: 15px;
-    }
+    // .mine .message.last:before {
+    //     content: "";
+    //     position: absolute;
+    //     z-index: 0;
+    //     top: 0;
+    //     left: -8px;
+    //     height: 20px;
+    //     width: 20px;
+    //     background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
+    //     background-attachment: fixed;
+    //     border-bottom-left-radius: 15px;
+    // }
 
-    .mine .message.last:after {
-        content: "";
-        position: absolute;
-        z-index: 1;
-        top: 0;
-        left: -10px;
-        width: 10px;
-        height: 20px;
-        background: #eaeaea;
-        border-bottom-left-radius: 10px;
-    }
+    // .mine .message.last:after {
+    //     content: "";
+    //     position: absolute;
+    //     z-index: 1;
+    //     top: 0;
+    //     left: -10px;
+    //     width: 10px;
+    //     height: 20px;
+    //     background: #eaeaea;
+    //     border-bottom-left-radius: 10px;
+    // }
 }
 
 
