--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -46,11 +46,30 @@ margin-right: 5px;
 }
 }
 @include sm{
- .plyr__volume input{
+.item-slide .overlay{
+    display:block !important;
+    background-image: linear-gradient(to bottom, rgba(29, 29, 29, 0), #011025);
+}
+.item-slide .overlay .information{
+    text-align: center;
+}
+.Single-Movie .plyr__volume input, .Single-Series .plyr__volume input, .episode .plyr__volume input{
         width:30px  !important;
     }
     .plyr video{
         min-height:400px;
+    }
+    .plyr--airplay-supported [data-plyr=airplay], .plyr--captions-enabled [data-plyr=captions], .plyr--pip-supported [data-plyr=pip]{
+        display:none,
+    }
+    .plyr__controls>.plyr__control:first-child, .plyr__controls>.plyr__control:first-child+[data-plyr=pause]{
+        display:none;
+    }
+    .plyr__controls .plyr__menu+.plyr__control, .plyr__controls{
+        display:none;
+    }
+    .plyr--video .plyr__time{
+        display:none;
     }
 .mobile-hidden{
     display:none !important;
@@ -77,7 +96,7 @@ margin-right: 5px;
     padding: 1rem 0;
 }
 .pc-hidden{
-    display:block;
+    display:block !important;
     .toggle {
         padding: 10px;
         float: right;
