--- a/assets/sass/_theme-dark.scss
+++ b/assets/sass/_theme-dark.scss
@@ -6,11 +6,16 @@ $secondary-color:$sColor;
 $primary-color:$sColor;
 
 /* ======== Dark Mode Style ========*/
+
 .darkMod {
     background-color: #0F0F0F;
     transition: 1s ease-in-out;
     color: $sColor;
+    min-height:100vh;
 .chat .mine .message.last:after{
+    background-color: #0F0F0F;
+}
+.home-slider{
     background-color: #0F0F0F;
 }
     a {
@@ -216,4 +221,9 @@ $primary-color:$sColor;
         background-image:none;
         background-color: #090a1f;
     }
+}
+
+.Single-Movie .others a, .Single-Series .others a, .episode .others a{
+    box-shadow:none;
+    border:2px solid #2c2c2c;
 }
