--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -9,6 +9,18 @@
 * {
     font-family: 'Cairo', sans-serif;
 }
+@media screen and (min-width: 300px) and (max-width: 767px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}
 
 .fa,
 .far,
