--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -62,6 +62,9 @@ margin-right: 5px;
     .plyr--video .plyr__time{
         display:none;
     }
+    .swiper-slide{
+        padding:0,
+    }
 .mobile-hidden{
     display:none !important;
 }
