--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -50,14 +50,15 @@ margin-right: 5px;
     display:block !important;
     background-image: linear-gradient(to bottom, rgba(29, 29, 29, 0), #011025);
 }
+.plyr:-webkit-full-screen video, .plyr:fullscreen video{
+    height:100% !important;
+    width:100% !important;
+}
 .item-slide .overlay .information{
     text-align: center;
 }
 .Single-Movie .plyr__volume input, .Single-Series .plyr__volume input, .episode .plyr__volume input{
         width:30px  !important;
-    }
-    .plyr video{
-        min-height:400px;
     }
     .plyr--video .plyr__time{
         display:none;
@@ -159,7 +160,7 @@ margin-right: 5px;
                 overflow: hidden !important;
         }
          .descrption{
-    margin-bottom: 25px !important;
+             margin-bottom: 25px !important;
         }
         .movie-information .information-list li span:first-of-type{
                 width: 100px !important;
@@ -184,6 +185,13 @@ margin-right: 5px;
         display:block !important;
         -webkit-animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
         animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+    }
+    .plyr:-webkit-full-screen {
+        background: #000 !important;
+        border-radius: 0!important;
+        height: 100% !important;
+        margin: 0 !important;
+        width: 100% !important;
     }
 }
 
