--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -414,6 +414,7 @@
   box-sizing: border-box; }
 
 * {
+  font-style: normal;
   font-family: 'Cairo', sans-serif; }
 
 .fa,
@@ -906,7 +907,6 @@ i {
     -o-transition: 0.4s ease-in-out;
     transition: 0.4s ease-in-out;
     transition-delay: 0s;
-    object-fit: contain;
     width: 100%;
     height: 100%;
     border-radius: 20px; }
@@ -959,7 +959,7 @@ i {
           margin-left: 0.5rem;
           display: inline-block; }
         .item-slide .overlay .information .subinfo-block .audience {
-          color: #00ff00;
+          color: #fed600;
           font-weight: bold; }
         .item-slide .overlay .information .subinfo-block .vidqu {
           color: red;
@@ -1265,8 +1265,7 @@ i {
   .Single-Movie .plyr video,
   .Single-Series .plyr video,
   .episode .plyr video {
-    width: 100%;
-    object-fit: contain; }
+    width: 100%; }
   .Single-Movie .same-movies,
   .Single-Series .same-movies,
   .episode .same-movies {
@@ -1784,7 +1783,23 @@ i {
     position: relative; }
 
 .fixed .chat {
-  top: 36rem; }
+  top: 38rem; }
+
+.swiper-button-prev, .swiper-container-rtl .swiper-button-next {
+  left: 10px;
+  right: auto; }
+
+.swiper-button-prev, .swiper-button-next {
+  position: absolute;
+  top: 50%;
+  width: 27px;
+  height: 44px;
+  margin-top: -22px;
+  z-index: 10;
+  cursor: pointer;
+  background-size: 27px 44px;
+  background-position: center;
+  background-repeat: no-repeat; }
 
 /* ======== Dark Mode Style ========*/
 .darkMod {
