--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -579,8 +579,8 @@ i {
     color: #fff; }
     .header .navbar-brand .atfrg-logo {
       height: 90px;
-      padding: 10px;
-      margin-top: -1.6rem; }
+      padding: 16px;
+      margin-top: -0.6rem; }
   .header .nav-item a {
     color: #fff;
     font-size: 1.3rem; }
@@ -886,7 +886,8 @@ i {
       .item-slide .poster .rate i {
         text-align: left;
         margin-right: 3px;
-        font-weight: bold; }
+        font-weight: bold;
+        color: #fff; }
   .item-slide:hover .overlay {
     display: block;
     -webkit-transition: 0.4s ease-in-out;
@@ -1647,7 +1648,7 @@ i {
       height: 700px;
       background-repeat: no-repeat;
       width: 100%;
-      background-position: bottom;
+      background-position: center;
       overflow: hidden;
       position: relative;
       margin: 0 auto; }
@@ -1910,6 +1911,14 @@ i {
         -moz-transition: 0.3s ease-in-out;
         -o-transition: 0.3s ease-in-out;
         transition: 0.3s ease-in-out; }
+  .darkMod #download .note span {
+    color: #00f3ff; }
+  .darkMod .chat .message p {
+    color: #ffde00; }
+  .darkMod .chat .message button {
+    color: #cdccff; }
+    .darkMod .chat .message button:hover {
+      color: #fff; }
   .darkMod .Fast-Search {
     background-color: #181818 !important;
     -webkit-box-shadow: 0px 0px 5px 0px #0c0e1f;
