--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -210,8 +210,8 @@ i {
 
         .atfrg-logo {
             height: 90px;
-            padding: 10px;
-            margin-top: -1.6rem;
+            padding: 16px;
+            margin-top: -0.6rem;
         }
     }
 
@@ -576,6 +576,7 @@ i {
                 text-align: left;
                 margin-right: 3px;
                 font-weight: bold;
+                color:#fff;
             }
         }
     }
@@ -1548,7 +1549,7 @@ $cloud-bgColor: #fff;
             height: 700px;
             background-repeat: no-repeat;
             width: 100%;
-            background-position: bottom;
+            background-position: center;
             overflow: hidden;
             position: relative;
             margin: 0 auto;
