--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -848,7 +848,8 @@ i {
     .item-slide .poster img {
       height: 100%;
       width: 100%;
-      border-radius: 20px; }
+      border-radius: 20px;
+      object-fit: cover; }
       .item-slide .poster img:hover {
         box-shadow: inset 0 -20px 8px 9px #000000;
         -webkit-box-shadow: inset 0 -20px 8px 9px #000000;
@@ -1652,7 +1653,8 @@ i {
       background-position: center;
       overflow: hidden;
       position: relative;
-      margin: 0 auto; }
+      margin: 0 auto;
+      background-size: cover; }
       .home-slider .my-swiper .big-slide:hover .slide-info {
         display: block;
         -webkit-animation: fade-in-fwd 2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
