--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -527,6 +527,7 @@ i {
             height: 100%;
             width: 100%;
             border-radius: 20px;
+            object-fit: cover;
 
             &:hover {
                 box-shadow: inset 0 -20px 8px 9px #000000;
@@ -1554,6 +1555,7 @@ $cloud-bgColor: #fff;
             overflow: hidden;
             position: relative;
             margin: 0 auto;
+            background-size: cover;
 
             // background-attachment: fixed;
             &:hover .slide-info {
