--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -1163,7 +1163,7 @@ $cloud-bgColor: #fff;
     }
 
     .chat-video {
-        bottom: 10rem;
+        position: absolute;
         right: 2rem;
         z-index: 1;
 
@@ -1645,6 +1645,86 @@ $cloud-bgColor: #fff;
 }
 
 /* == Messages === */
+.chatb {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 30px;
+    right: 10px;
+    z-index: 99999;
+
+    a {
+        color: #fff;
+        margin-left: 1rem;
+    }
+
+
+    .messages {
+        margin-top: 30px;
+        display: flex;
+    }
+
+    .message {
+        border-radius: 20px;
+        padding: 1rem 1rem;
+        text-align: center;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        display: inline-block;
+
+        p {
+            display: block;
+            margin-bottom: 10px;
+        }
+
+        button {
+            background-color: transparent;
+            border: none;
+            margin-left: 1rem;
+            color: #45fffc;
+
+            &:hover {
+                color: #000;
+            }
+        }
+    }
+
+    .mine {
+        align-items: flex-end;
+    }
+
+    .mine .message {
+        color: white;
+        background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
+        background-attachment: fixed;
+        position: relative;
+    }
+
+    // .mine .message.last:before {
+    //     content: "";
+    //     position: absolute;
+    //     z-index: 0;
+    //     bottom: 0;
+    //     right: -8px;
+    //     height: 20px;
+    //     width: 20px;
+    //     background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
+    //     background-attachment: fixed;
+    //     border-bottom-left-radius: 15px;
+    // }
+
+    // .mine .message.last:after {
+    //     content: "";
+    //     position: absolute;
+    //     z-index: 1;
+    //     bottom: 0;
+    //     right: -10px;
+    //     width: 10px;
+    //     height: 20px;
+    //     background: #eaeaea;
+    //     border-bottom-left-radius: 10px;
+    // }
+}
 .chat {
     display: flex;
     flex-direction: column;
