--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2100,6 +2100,13 @@ i {
   .mobile-hidden {
     display: none !important; } }
 @media (min-width: 225px) and (max-width: 576px) {
+  .Single-Movie .chat-video, .Single-Series .chat-video, .episode .chat-video {
+    right: 1rem;
+    bottom: 4rem; }
+
+  .chat .message p {
+    margin-bottom: 0px; }
+
   .item-slide .overlay {
     display: block !important;
     background-image: linear-gradient(to bottom, rgba(29, 29, 29, 0), #011025); }
@@ -2225,6 +2232,13 @@ i {
     animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
 
   .plyr:-webkit-full-screen {
+    background: #000 !important;
+    border-radius: 0 !important;
+    height: 100% !important;
+    margin: 0 !important;
+    width: 100% !important; }
+
+  .plyr:fullscreen {
     background: #000 !important;
     border-radius: 0 !important;
     height: 100% !important;
