--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2111,10 +2111,6 @@ i {
     display: block !important;
     background-image: linear-gradient(to bottom, rgba(29, 29, 29, 0), #011025); }
 
-  .plyr:-webkit-full-screen video, .plyr:fullscreen video {
-    height: 100% !important;
-    width: 100% !important; }
-
   .item-slide .overlay .information {
     text-align: center; }
 
@@ -2229,21 +2225,7 @@ i {
   .sub.show {
     display: block !important;
     -webkit-animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-    animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
-
-  .plyr:-webkit-full-screen {
-    background: #000 !important;
-    border-radius: 0 !important;
-    height: 100% !important;
-    margin: 0 !important;
-    width: 100% !important; }
-
-  .plyr:fullscreen {
-    background: #000 !important;
-    border-radius: 0 !important;
-    height: 100% !important;
-    margin: 0 !important;
-    width: 100% !important; } }
+    animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) both; } }
 * {
   font-family: 'Tajawal', sans-serif; }
 
