--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1580,6 +1580,9 @@ i {
   animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
 
 /*=== Generes === */
+.it-client {
+  margin: 0 auto; }
+
 .movies-genre {
   -webkit-box-shadow: 0px 0px 5px 0px #d8d8d8;
   -moz-box-shadow: 0px 0px 5px 0px #d8d8d8;
