--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -46,6 +46,9 @@ margin-right: 5px;
 }
 }
 @include sm{
+    .Slider-block .my-swiper .swiper-button-prev i, .Slider-block .my-swiper .swiper-button-next i{
+        font-size:3rem;
+    }
     .Single-Movie .chat-video, .Single-Series .chat-video, .episode .chat-video{
         right:1rem;
         bottom: 4rem;
@@ -55,7 +58,7 @@ margin-right: 5px;
     }
 .item-slide .overlay{
     display:block !important;
-    background-image: linear-gradient(to bottom, rgba(29, 29, 29, 0), #011025);
+    background-image: linear-gradient(to bottom, rgba(29, 29, 29, 0), #000e36);
 }
 // .plyr:-webkit-full-screen video, .plyr:fullscreen video{
 //     height:100% !important;
