--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -1891,3 +1891,7 @@ $cloud-bgColor: #fff;
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.item-slide .overlay .information .name{
+    direction: ltr;
+}
