--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -443,11 +443,18 @@ i {
     }
 }
 
-
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 120px;
+    width: auto;
+    margin-bottom: 1rem;
+}
 /* Slider */
 .Slider-block {
     .my-swiper {
-        height: 330px;
+        height: 240px;
         width: 100%;
         @include transition(0.4s);
 
@@ -455,20 +462,28 @@ i {
             display: flex;
             justify-content: center;
             align-items: center;
-            min-width: 250px;
+            min-width: 120px;
             width: auto;
+            margin-bottom: 1rem;
         }
 
         .swiper-button-prev,
         .swiper-button-next {
-            width: 5rem;
-            height: 10rem;
+            height: auto;
             display: none;
+            padding: 2rem 0;
+            background-color: #272727d1;
+            font-size: 34px;
+            width: 3rem;
+        border-radius: 5px;
             background-image: none !important;
+           
 
             i {
-                font-size: 5rem;
+                margin: 0 auto;
+                display: block;
                 color: #ffe801;
+                text-align: center;
                 @include transition(0.4s);
             }
 
@@ -479,11 +494,11 @@ i {
         }
 
         .swiper-button-prev {
-            right: 35px;
+            right: 15px;
         }
 
         .swiper-button-next {
-            left: 35px;
+            left: 15px;
         }
 
         &:hover .swiper-button-prev {
@@ -500,7 +515,7 @@ i {
 
 
 .Slider-block {
-    margin: 30px auto;
+    margin: 0 auto;
     display: inline-flex;
     overflow: hidden;
     max-width: 100%;
@@ -512,22 +527,22 @@ i {
 }
 
 .item-slide {
-    margin: 10px;
+    // margin: 10px;
     height: 100%;
     position: relative;
     border-radius: 20px;
-    min-width: 200px;
+     min-width: 120px;
     @include transition(1s);
 
     .poster {
-        height: 330px;
+        height: 180px;
         position: relative;
 
         img {
             height: 100%;
             width: 100%;
-            border-radius: 20px;
-            object-fit: cover;
+            border-radius: 0;
+            object-fit: fill;
 
             &:hover {
                 box-shadow: inset 0 -20px 8px 9px #000000;
@@ -570,8 +585,9 @@ i {
             font-weight: bold;
             padding: 1px 6px;
             position: absolute;
-            top: 40px;
+            top: 10px;
             left: 10px;
+            font-size: 11px;
             border-radius: 20px;
 
             i {
@@ -715,7 +731,7 @@ i {
 .home-slider-block {
     @include boxShadow(0px, 0px, 5px, 0px, #d8d8d8);
     margin: 20px 80px;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: #fff;
     z-index: 9999;
     position: relative;
@@ -735,7 +751,7 @@ i {
 
     .back-color {
         background-image: linear-gradient(109.6deg, #4148cf 21.2%, #5061d8 73.1%);
-        border-radius: 20px 20px 0 0;
+        border-radius: 10px 10px 0 0;
 
     }
 
@@ -753,7 +769,8 @@ i {
         display: flex;
         align-items: center;
         color: $light-color;
-        font-size: 18px;
+        font-size: 16px;
+        padding: 7px 0;
         font-weight: bold;
 
         svg {
@@ -1229,12 +1246,12 @@ $cloud-bgColor: #fff;
         border-top: 4px solid $primary-color;
         border-radius: 22px;
         width: 100%;
-        min-height: 300px;
+        min-height: auto;
 
         img {
             width: 100%;
-            border-radius: 20px;
-            min-height: 300px;
+            border-radius: 0;
+            min-height: 180px;
             @include boxShadow(0, 0, 12px, -1px, rgba(214, 214, 214, 0.6));
         }
     }
@@ -1378,6 +1395,7 @@ $cloud-bgColor: #fff;
         margin: 30px 20px;
         border-top: 4px solid $primary-color;
         margin: 2rem auto;
+        width: 62%;
     }
 
     .player-trailer {
@@ -1477,18 +1495,18 @@ $cloud-bgColor: #fff;
     }
 
     .global-item {
-        height: 300px;
+        height: auto;
         margin-bottom: 40px;
 
         .item-slide {
-            height: 300px;
+            height: 180px;
             margin: 10px 0;
 
             .poster {
-                height: 300px !important;
+                height: 180px !important;
 
                 img {
-                    height: 300px;
+                    height: 180px;
                 }
             }
         }
@@ -1881,7 +1899,7 @@ $cloud-bgColor: #fff;
 }
 .swiper-button-prev, .swiper-button-next{
     position: absolute;
-    top: 50%;
+    top: 37% !important;
     width: 27px;
     height: 44px;
     margin-top: -22px;
