--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -171,6 +171,18 @@ margin-right: 5px;
 
 /* === Pages === */
 @include sm{
+    .plyr__controls>.plyr__control:first-child{
+        display: none;
+    }
+   .plyr__controls>.plyr__control+[data-plyr=rewind],.plyr__controls>.plyr__control+[data-plyr=fast-forward]{
+        display: none;
+    }
+    .itemtitle{
+        display: none;
+    }
+    .plyr__progress__container{
+        top: 3px !important;
+    }
     .more-btn {
         font-size: 16px;
         padding-bottom: 1rem;
