--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -10,7 +10,18 @@
     font-style: normal;
     font-family: 'Cairo', sans-serif;
 }
-
+body::-webkit-scrollbar {
+    width: 0.5em;
+  }
+   
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    background-color: rgb(45, 45, 45);
+    outline: 1px solid rgb(49, 49, 49);
+  }
 .fa,
 .far,
 .fas {
@@ -371,7 +382,18 @@ i {
             vertical-align: middle;
         }
     }
-
+    .Fast-Search::-webkit-scrollbar {
+        width: 0.5em;
+      }
+       
+      .Fast-Search::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      }
+       
+      .Fast-Search::-webkit-scrollbar-thumb {
+        background-color: rgb(45, 45, 45);
+        outline: 1px solid slategrey;
+      }
     .Fast-Search {
         background-color: #fff;
         border-radius: 20px;
@@ -447,7 +469,7 @@ i {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 120px;
+    min-width: 150px;
     width: auto;
     margin-bottom: 1rem;
 }
@@ -462,7 +484,7 @@ i {
             display: flex;
             justify-content: center;
             align-items: center;
-            min-width: 120px;
+            min-width: 150px;
             width: auto;
             margin-bottom: 1rem;
         }
@@ -1244,7 +1266,6 @@ $cloud-bgColor: #fff;
 
     .poster {
         border-top: 4px solid $primary-color;
-        border-radius: 22px;
         width: 100%;
         min-height: auto;
 
@@ -1393,9 +1414,9 @@ $cloud-bgColor: #fff;
 
     .player-mov {
         margin: 30px 20px;
-        border-top: 4px solid $primary-color;
+        border-top: 4px solid #363636;
         margin: 2rem auto;
-        width: 62%;
+        width: 80%;
     }
 
     .player-trailer {
@@ -1913,3 +1934,263 @@ $cloud-bgColor: #fff;
 .item-slide .overlay .information .name{
     direction: ltr;
 }
+
+.plyr__controls{
+    background: #141414db !important;
+}
+ .plyr__progress__container{
+    display: block !important;
+    position: absolute  !important;
+    top: 11px  !important;
+    width: 95%;
+    margin: 0 auto;
+    text-align: center;
+    left: 2%;
+}
+
+
+
+/* player */
+
+.video-loader {
+    display: none;
+    border: 0;
+    border-radius: 100%;
+    color: #fff;
+    display: none;
+    left: 50%;
+    padding: 15px;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    background-color: transparent !important;
+}
+.video-logo {
+    border: 0;
+    color: #fff;
+    position: absolute;
+    z-index: 2;
+    height: auto;
+    width: 80px;
+    z-index: 9999;
+    top: 5%;
+    left: 5%;
+    background-color: transparent !important;
+}
+.plyr--loading .video-loader {
+    display: block;
+}
+@include sm {
+    .plyr {
+        height: 500px;
+    }
+    .plyr video {
+        object-fit: contain !important;
+    }
+    .video-logo {
+        border: 0;
+        color: rgb(187, 153, 153);
+        position: absolute;
+        z-index: 2;
+        height: auto;
+        width: 50px;
+        z-index: 9999;
+        top: 8%;
+        left: 8%;
+        background-color: transparent !important;
+    }
+}
+@include md {
+    .video-logo {
+        border: 0;
+        color: rgb(187, 153, 153);
+        position: absolute;
+        z-index: 2;
+        height: auto;
+        width: 60px;
+        z-index: 9999;
+        top: 8%;
+        left: 8%;
+        background-color: transparent !important;
+    }
+}
+.chat-video {
+    bottom: 7rem;
+    right: 2.2rem;
+    .mine .message.last:after {
+        background: #000;
+    }
+    .mine .message.last:before {
+        background-image: none;
+        background-color: #393939;
+    }
+    .mine .message {
+        background-image: none;
+        background-color: #393939;
+    }
+}
+.ad-chat {
+    top: 7rem;
+    right: 2.2rem;
+    .mine .message.last:after {
+        background: #000;
+    }
+    .mine .message.last:before {
+        background-image: none;
+        background-color: #393939;
+    }
+    .mine .message {
+        background-image: none;
+        background-color: #393939;
+    }
+}
+.chat .message {
+    background-color: #232323;
+}
+.plyr:-webkit-full-screen .plyr__captions {
+    display: block;
+}
+@include xl {
+    .plyr__captions {
+        font-size: 22px !important;
+        bottom: 2rem !important;
+    }
+    .plyr:-webkit-full-screen .plyr__captions {
+        font-size: 30px !important;
+        bottom: 4rem !important;
+    }
+}
+@include lg {
+    .plyr__captions {
+        font-size: 24px !important;
+        bottom: 2rem !important;
+    }
+    .plyr:-webkit-full-screen .plyr__captions {
+        font-size: 26px !important;
+        bottom: 4rem !important;
+    }
+}
+@include sm {
+    .plyr:-webkit-full-screen .plyr__captions {
+        z-index: 99999;
+    }
+}
+.vide-ad {
+    border: 0;
+    display: none;
+    color: #fff;
+    position: absolute;
+    z-index: 2;
+    height: 0;
+    width: 0;
+    // z-index: 9999;
+    width: 60%;
+    top: 36%;
+    left: 22%;
+    background-color: transparent !important;
+}
+@include sm {
+    .vide-ad {
+        border: 0;
+        color: #fff;
+        position: absolute;
+        z-index: 2;
+        max-height: 150px;
+        // overflow: hidden;
+        width: 60%;
+        top: 26%;
+        left: 22%;
+        #container-460d6761d1e465c09fca4ee917dd0ccb{
+        max-height: 150px;
+        overflow: hidden;
+        display: none;
+        }
+    }
+    #container-b7d66cc8d304167ae2aa320276ca566c__stand{
+    max-height: 200px;
+    overflow: hidden;
+    }
+}
+@include md {
+    .vide-ad {
+        border: 0;
+        color: #fff;
+        position: absolute;
+        z-index: 2;
+        max-height: 150px;
+        // overflow: hidden;
+         width: 100%;
+        top: 44%;
+        left: 0;
+        #container-460d6761d1e465c09fca4ee917dd0ccb{
+        max-height: 150px;
+        overflow: hidden;
+        }
+    }
+}
+.chat .message p {
+    margin-bottom: 0 !important;
+}
+.ShowAd {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    div {
+        height: 100% !important;
+        width: 100% !important;
+    }
+}
+.skip-button {
+    border: 0;
+    color: #fff;
+    position: absolute;
+    z-index: 999;
+    height: auto;
+    padding: 10px 4rem;
+    z-index: 9999;
+    bottom: 18%;
+    right: 5%;
+    letter-spacing: 1px;
+    background-color: rgba(46, 47, 50, 0.84);
+}
+.itemtitle{
+    width: 100%;
+    border-left: 3px solid #363636;
+    margin: 0 1rem;
+    text-align: center;
+}
+.episodesList{
+    position: absolute;
+    top: -15rem;
+    right: 4rem;
+    width: auto;
+    list-style: none;
+    background-color: #1f1f1f;
+    height: 200px;
+    overflow-y: scroll;
+    li{
+        a{
+            background: #111;
+             padding: 8px 3rem;
+        display: block;
+        margin-bottom: 2px;
+        text-decoration: none;
+        }
+    }
+}
+.episodesList::-webkit-scrollbar {
+    width: 0.5em;
+  }
+   
+  .episodesList::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  .episodesList::-webkit-scrollbar-thumb {
+    background-color: rgb(45, 45, 45);
+    outline: 1px solid slategrey;
+  }
