--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -23,7 +23,7 @@ margin-right: 5px;
         width:80%;
     }
     .small-nav .contact-us{
-margin-right: 5px;
+    margin-right: 5px;
     }
     .small-nav .contact-us li{
             margin-left: 2rem;
@@ -37,15 +37,43 @@ margin-right: 5px;
     .navbar-collapse{
     background: rgba(82, 42, 239, 0.89);
     position: absolute;
-    top: 11rem;
+    top: 4rem;
     text-align: right;
     width: 100%;
+    left: 0;
 }
 .mobile-hidden{
     display:none !important;
 }
 }
 @include sm{
+    .search-area .search-form-area .input-div{
+        position: absolute;
+    left: 0;
+    width: 75%;
+    }
+    .search-area .Fast-Search{
+        bottom: 20px;
+        top:inherit;
+    }
+    .Headers {
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+        z-index: 99999;
+        top: inherit;
+    }
+    .fixed {
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+        z-index: 99999;
+        top: inherit;
+        animation: none;
+    }
+    .home-slider .my-swiper .big-slide:hover .slide-info{
+        display: block;
+    }
     .Slider-block .my-swiper .swiper-button-prev i, .Slider-block .my-swiper .swiper-button-next i{
         font-size:3rem;
     }
@@ -69,10 +97,12 @@ margin-right: 5px;
     max-width: 300px;
 }
 .Slider-block .my-swiper .swiper-button-next{
-    left: 60px;
+    left: 5px;
+    display: none;
 }
 .Slider-block .my-swiper .swiper-button-prev{
-    right: 30px;
+    right: 5px;
+    display: none;
 }
 .item-slide .overlay .information{
     text-align: center;
@@ -101,14 +131,27 @@ margin-right: 5px;
 .navbar-collapse{
     background: rgba(0, 0, 29, 0.78);
     position: absolute;
-    top: 11rem;
+    bottom: 4rem;
     text-align: right;
     width: 100%;
+    left: 0;
 }
 .sub-head-mob{
     display:block;
-    background-color: #007bc3c4;
+    background-color: transparent;
     padding: 1rem 0;
+    width: 80%;
+    position: absolute;
+    top: 0;
+}
+.darkMod .search-area .search-form-area .form-control{
+    font-size: 14px;
+}
+.navbar-brand{
+    display: none;
+}
+.input-div i{
+    display: none;
 }
 .pc-hidden{
     display:block !important;
@@ -129,11 +172,11 @@ margin-right: 5px;
 }
 @include sm{
 /* === Home === */
-.search-area{
-        width:80%;
-    }
+// .search-area{
+//         width:80%;
+//     }
 .home-slider-block .block-type{
-    padding:10px
+    padding:10px;
 }
 .home-slider-block .drob{
     display:block;
@@ -146,11 +189,11 @@ margin-right: 5px;
     z-index: 999;
     width: 100%;
     left: 0;
-    border-radius: 10px;
+    border-radius: 0;
     top: 26px;
 }
 .home-slider-block{
-    margin:20px 30px;
+    margin:20px 0;
 }
 .Slider-block .my-swiper{
     height: 220px;
@@ -158,9 +201,9 @@ margin-right: 5px;
             height: 180px;
     }
 }
-.Slider-block .my-swiper .swiper-button-prev, .Slider-block .my-swiper .swiper-button-next{
-    display:block;
-}
+// .Slider-block .my-swiper .swiper-button-prev, .Slider-block .my-swiper .swiper-button-next{
+//     // display:block;
+// }
 .Single-Movie .watch-list button, .Single-Series .watch-list button, .episode .watch-list button{
     padding: 8px 15px;
 }
