--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -752,8 +752,8 @@ i {
 /* == Home == */
 .home-slider-block {
     @include boxShadow(0px, 0px, 5px, 0px, #d8d8d8);
-    margin: 20px 80px;
-    border-radius: 10px;
+    margin: 20px 0;
+    border-radius: 0;
     background-color: #fff;
     z-index: 9999;
     position: relative;
@@ -773,7 +773,7 @@ i {
 
     .back-color {
         background-image: linear-gradient(109.6deg, #4148cf 21.2%, #5061d8 73.1%);
-        border-radius: 10px 10px 0 0;
+        border-radius: 0;
 
     }
 
