--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -1,229 +1,241 @@
 /* === Header === */
-@include xl{
-    .header .navbar-nav .nav-item{
-       margin-left: 1rem;
+
+@include xl {
+    .header .navbar-nav .nav-item {
+        margin-left: 1rem;
     }
 }
-@include lg{
-        .header .container-fluid{
-        width:100% !important;
+
+@include lg {
+    .header .container-fluid {
+        width: 100% !important;
     }
-    .header .navbar-nav .nav-item{
-        margin-left:5px;
+    .header .navbar-nav .nav-item {
+        margin-left: 5px;
     }
-     .header .navbar-nav{
-        font-size:14px;
+    .header .navbar-nav {
+        font-size: 14px;
     }
-    .small-nav .contact-us{
-margin-right: 5px;
+    .small-nav .contact-us {
+        margin-right: 5px;
     }
 }
-@include md{
-    .search-area{
-        width:80%;
+
+@include md {
+    .search-area {
+        width: 80%;
     }
-    .small-nav .contact-us{
-    margin-right: 5px;
+    .small-nav .contact-us {
+        margin-right: 5px;
     }
-    .small-nav .contact-us li{
-            margin-left: 2rem;
+    .small-nav .contact-us li {
+        margin-left: 2rem;
     }
- .header .navbar-nav .nav-item{
-        margin-left:5px;
+    .header .navbar-nav .nav-item {
+        margin-left: 5px;
     }
-    .header .navbar-nav{
-        font-size:14px;
+    .header .navbar-nav {
+        font-size: 14px;
     }
-    .navbar-collapse{
-    background: rgba(82, 42, 239, 0.89);
-    position: absolute;
-    top: 4rem;
-    text-align: right;
-    width: 100%;
-    left: 0;
-}
-.mobile-hidden{
-    display:none !important;
-}
-}
-@include sm{
-    .search-area .search-form-area .input-div{
+    .navbar-collapse {
+        background: rgba(82, 42, 239, 0.89);
         position: absolute;
-    left: 0;
-    width: 75%;
-    }
-    .search-area .Fast-Search{
-        bottom: 20px;
-        top:inherit;
-    }
-    .Headers {
-        position: fixed;
+        top: 4rem;
+        text-align: right;
         width: 100%;
-        bottom: 0;
-        z-index: 99999;
-        top: inherit;
+        left: 0;
     }
+    .mobile-hidden {
+        display: none !important;
+    }
+}
+
+@include sm {
+    // .search-area .search-form-area .input-div {
+    //     position: absolute;
+    //     left: 0;
+    //     width: 75%;
+    // }
+    // .search-area .Fast-Search {
+    //     bottom: 20px;
+    //     top: inherit;
+    // }
+    // .Headers {
+    //     position: fixed;
+    //     width: 100%;
+    //     top: 0;
+    //     z-index: 99999;
+    //     top: inherit;
+    // }
     .fixed {
         position: fixed;
         width: 100%;
-        bottom: 0;
+        top: 0;
         z-index: 99999;
-        top: inherit;
         animation: none;
     }
-    .home-slider .my-swiper .big-slide:hover .slide-info{
+    .home-slider .my-swiper .big-slide:hover .slide-info {
         display: block;
     }
-    .Slider-block .my-swiper .swiper-button-prev i, .Slider-block .my-swiper .swiper-button-next i{
-        font-size:3rem;
+    .Slider-block .my-swiper .swiper-button-prev i,
+    .Slider-block .my-swiper .swiper-button-next i {
+        font-size: 3rem;
     }
-    .Single-Movie .chat-video, .Single-Series .chat-video, .episode .chat-video{
-        right:1rem;
+    .Single-Movie .chat-video,
+    .Single-Series .chat-video,
+    .episode .chat-video {
+        right: 1rem;
         bottom: 4rem;
     }
-    .chat .message p{
+    .chat .message p {
         margin-bottom: 0px;
     }
-.item-slide .overlay{
-    display:block !important;
-    background-image: linear-gradient(to bottom, rgba(29, 29, 29, 0), #000e36);
-}
-// .plyr:-webkit-full-screen video, .plyr:fullscreen video{
-//     height:100% !important;
-//     width:100% !important;
-// }
-.item-slide {
-    min-width:auto;
-    max-width: 300px;
-}
-.Slider-block .my-swiper .swiper-button-next{
-    left: 5px;
-    display: none;
-}
-.Slider-block .my-swiper .swiper-button-prev{
-    right: 5px;
-    display: none;
-}
-.item-slide .overlay .information{
-    text-align: center;
-}
-.Single-Movie .plyr__volume input, .Single-Series .plyr__volume input, .episode .plyr__volume input{
-        width:30px  !important;
+    .item-slide .overlay {
+        display: block !important;
+        background-image: linear-gradient(to bottom, rgba(29, 29, 29, 0), #000e36);
     }
-    .plyr--video .plyr__time{
-        display:none;
+    // .plyr:-webkit-full-screen video, .plyr:fullscreen video{
+    //     height:100% !important;
+    //     width:100% !important;
+    // }
+    .item-slide {
+        min-width: auto;
+        max-width: 300px;
     }
-    .swiper-slide{
-        padding:0,
-    }
-.mobile-hidden{
-    display:none !important;
-}
-.small-nav .contact-us li{
-    margin-left:1rem;
-}
-.small-nav .contact-us{
-        justify-content: center;
-}
-.header .navbar-brand{
-    margin:0 auto;
-}
-.navbar-collapse{
-    background: rgba(0, 0, 29, 0.78);
-    position: absolute;
-    bottom: 4rem;
-    text-align: right;
-    width: 100%;
-    left: 0;
-}
-.sub-head-mob{
-    display:block;
-    background-color: transparent;
-    padding: 1rem 0;
-    width: 80%;
-    position: absolute;
-    top: 0;
-}
-.darkMod .search-area .search-form-area .form-control{
-    font-size: 14px;
-}
-.navbar-brand{
-    display: none;
-}
-.input-div i{
-    display: none;
-}
-.pc-hidden{
-    display:block !important;
-    .toggle {
-        padding: 10px;
-        float: right;
-    }
-}
-.home-slider .my-swiper .big-slide .slide-info{
-   padding-top:5rem;
-    .title{
-        font-size: 30px;
-    }
-    .overview{
+    .Slider-block .my-swiper .swiper-button-next {
+        left: 5px;
         display: none;
     }
-}
-}
-@include sm{
-/* === Home === */
-// .search-area{
-//         width:80%;
-//     }
-.home-slider-block .block-type{
-    padding:10px;
-}
-.home-slider-block .drob{
-    display:block;
-}
-
-.home-slider-block .categories ul{
-    display:none;
-    position: absolute;
-    background-image: linear-gradient(109.6deg, #4148cf 21.2%, #5061d8 73.1%);
-    z-index: 999;
-    width: 100%;
-    left: 0;
-    border-radius: 0;
-    top: 26px;
-}
-.home-slider-block{
-    margin:20px 0;
-}
-.Slider-block .my-swiper{
-    height: 220px;
-    .item-slide .poster{
-            height: 180px;
+    .Slider-block .my-swiper .swiper-button-prev {
+        right: 5px;
+        display: none;
+    }
+    .item-slide .overlay .information {
+        text-align: center;
+    }
+    .Single-Movie .plyr__volume input,
+    .Single-Series .plyr__volume input,
+    .episode .plyr__volume input {
+        width: 30px !important;
+    }
+    .plyr--video .plyr__time {
+        display: none;
+    }
+    .swiper-slide {
+        padding: 0,
+    }
+    .mobile-hidden {
+        display: none !important;
+    }
+    .small-nav .contact-us li {
+        margin-left: 1rem;
+    }
+    .small-nav .contact-us {
+        justify-content: center;
+    }
+    .header .navbar-brand {
+        margin: 0 auto;
+    }
+    .navbar-collapse {
+        background: rgba(0, 0, 29, 0.78);
+        position: absolute;
+        top: 11rem;
+        text-align: right;
+        width: 100%;
+        left: 0;
+    }
+    .sub-head-mob {
+        display: block;
+        background-color: #010025;
+        padding: 1rem 0;
+        width: 100%;
+        position: absolute;
+        top: 69px;
+    }
+    .search-area .search-form-area {
+        margin: 0 auto;
+        z-index: 99;
+        width: 80%;
+    }
+    .darkMod .search-area .search-form-area .form-control {
+        font-size: 14px;
+    }
+    .pc-hidden {
+        display: block !important;
+        .toggle {
+            padding: 10px;
+            float: right;
+        }
+    }
+    .home-slider .my-swiper .big-slide .slide-info {
+        padding-top: 5rem;
+        .title {
+            font-size: 30px;
+        }
+        .overview {
+            display: none;
+        }
     }
 }
-// .Slider-block .my-swiper .swiper-button-prev, .Slider-block .my-swiper .swiper-button-next{
-//     // display:block;
-// }
-.Single-Movie .watch-list button, .Single-Series .watch-list button, .episode .watch-list button{
-    padding: 8px 15px;
+
+@include sm {
+    /* === Home === */
+    // .search-area{
+    //         width:80%;
+    //     }
+    .home-slider-block .block-type {
+        padding: 10px;
+    }
+    .home-slider-block .drob {
+        display: block;
+    }
+    .home-slider-block .categories ul {
+        display: none;
+        position: absolute;
+        background-image: linear-gradient(109.6deg, #4148cf 21.2%, #5061d8 73.1%);
+        z-index: 999;
+        width: 100%;
+        left: 0;
+        border-radius: 0;
+        top: 26px;
+    }
+    .home-slider-block {
+        margin: 20px 0;
+    }
+    .Slider-block .my-swiper {
+        height: 220px;
+        .item-slide .poster {
+            height: 180px;
+        }
+    }
+    // .Slider-block .my-swiper .swiper-button-prev, .Slider-block .my-swiper .swiper-button-next{
+    //     // display:block;
+    // }
+    .Single-Movie .watch-list button,
+    .Single-Series .watch-list button,
+    .episode .watch-list button {
+        padding: 8px 15px;
+    }
+    #download {
+        width: 100%;
+    }
 }
-#download{
-    width: 100%;
-}
-}
+
 
 /* === Pages === */
-@include sm{
-    .plyr__controls>.plyr__control:first-child{
+
+@include sm {
+    .plyr__controls>.plyr__control:first-child {
         display: none;
     }
-   .plyr__controls>.plyr__control+[data-plyr=rewind],.plyr__controls>.plyr__control+[data-plyr=fast-forward]{
+    .plyr__controls>.plyr__control+[data-plyr=rewind],
+    .plyr__controls>.plyr__control+[data-plyr=fast-forward] {
         display: none;
     }
-    .itemtitle{
+    .itemtitle {
         display: none;
     }
-    .plyr__progress__container{
+    .plyr__progress__container {
         top: 3px !important;
     }
     .more-btn {
@@ -235,37 +247,38 @@ margin-right: 5px;
         margin-left: 22px !important;
     }
     .player-mov {
-        width:100%;
+        width: 100%;
     }
-    .Single-Movie, .Single-Series, .episode {
+    .Single-Movie,
+    .Single-Series,
+    .episode {
         margin: 20px !important;
-        .container{
-                overflow: hidden !important;
+        .container {
+            overflow: hidden !important;
         }
-         .descrption{
-             margin-bottom: 25px !important;
+        .descrption {
+            margin-bottom: 25px !important;
         }
-        .movie-information .information-list li span:first-of-type{
-                width: 100px !important;
-    min-width: 100px !important;
-    max-width: 100px !important;
+        .movie-information .information-list li span:first-of-type {
+            width: 100px !important;
+            min-width: 100px !important;
+            max-width: 100px !important;
         }
-         .movie-information .information-list li i{
-             margin:0;
+        .movie-information .information-list li i {
+            margin: 0;
         }
-
     }
-    .movies-genre{
-            margin: 50px 15px;
+    .movies-genre {
+        margin: 50px 15px;
     }
-    .movies-genre .filters{
-            display: block;
-            li{
-                margin-bottom:10px;
-            }
+    .movies-genre .filters {
+        display: block;
+        li {
+            margin-bottom: 10px;
+        }
     }
-    .sub.show{
-        display:block !important;
+    .sub.show {
+        display: block !important;
         -webkit-animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
         animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
     }
@@ -284,4 +297,3 @@ margin-right: 5px;
     //     width: 100% !important;
     // }
 }
-
